index.html was changed in styles2 branche

--- a/task1 - git pracrice I/index.html
+++ b/task1 - git pracrice I/index.html
@@ -23,6 +23,6 @@
             <td><img src="https://zn.ua/img/article/2384/34_main.jpg" height="250" width="400" /></td>
         </tr>
     </table>
-
+    <p>Trying to change index.html</p>
 </body>
 </html>
